--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -11,7 +11,6 @@
     background-color: var(--clr-blue-200);
     height: clamp(12rem, 18vw, 18rem);
     margin-bottom: clamp(1rem, 8vw, 8rem);
-    transition: background-color 0.5s;
   }
 
   .cmp-svg-pages-decoration__svg {
@@ -22,7 +21,6 @@
     top: 100%;
     fill: var(--clr-blue-200);
     backface-visibility: hidden;
-    transition: fill 0.5s;
   }
 }
 
@@ -166,7 +164,7 @@
       box-decoration-break: clone;
       transform: scaleX(0);
       transform-origin: left;
-      transition: transform 3s ease-in;
+      /* transition: transform 3s ease-in; */
       /* prettier-ignore */
       transition-timing-function: linear(0, 0.007 1.4%, 0.029 2.9%, 0.117 6.2%, 0.231 9.3%, 0.61 18.6%, 0.716 21.6%, 0.803 24.4%, 0.875 27.2%, 0.934 30%, 0.981 32.9%, 1.017 35.9%, 1.054 41.4%, 1.064 47.8%, 1.005 76.2%, 1);
 
@@ -327,7 +325,6 @@
     top: 9.37rem;
     fill: #00000039;
     animation: autoRun 50s ease-in-out infinite;
-    transition: fill 0.5s;
 
     @media (width > 47.5rem) {
       display: unset;
