--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -11,6 +11,7 @@
     background-color: var(--clr-blue-200);
     height: clamp(12rem, 18vw, 18rem);
     margin-bottom: clamp(1rem, 8vw, 8rem);
+    z-index: 10;
   }
 
   .cmp-svg-pages-decoration__svg {
@@ -164,7 +165,7 @@
       box-decoration-break: clone;
       transform: scaleX(0);
       transform-origin: left;
-      /* transition: transform 3s ease-in; */
+      transition: transform 3s ease-in;
       /* prettier-ignore */
       transition-timing-function: linear(0, 0.007 1.4%, 0.029 2.9%, 0.117 6.2%, 0.231 9.3%, 0.61 18.6%, 0.716 21.6%, 0.803 24.4%, 0.875 27.2%, 0.934 30%, 0.981 32.9%, 1.017 35.9%, 1.054 41.4%, 1.064 47.8%, 1.005 76.2%, 1);
 
@@ -196,7 +197,7 @@
     }
   }
 
-  .services-box__svg {
+  .services-box__rocket-svg {
     position: relative;
     margin-inline: auto;
 
@@ -206,7 +207,6 @@
       left: 7rem;
       animation: rocketFloat-S 40s ease-in-out infinite;
       transform-origin: center;
-      z-index: -1;
 
       @media (width > 62.5rem) {
         position: relative;
