--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -224,6 +224,9 @@ html.dark-mode #dark-mode-toggle #svg-moon {
   border: none;
   background: transparent;
   cursor: pointer;
+  transition: transform 1.5s ease-in-out;
+  /* prettier-ignore */
+  transition-timing-function: linear(0, 0.618 4.6%, 1.072 9.7%, 1.358 15.3%, 1.446 18.4%, 1.497 21.7%, 1.512 23.9%, 1.514 26.2%, 1.481 31.5%, 1.421 36.4%, 1.174 53.4%, 1.108 59.5%, 1.059 65.7%, 1.028 71.9%, 1.009 78.9%, 1);
 
   svg {
     position: absolute;
@@ -249,11 +252,8 @@ html.dark-mode #dark-mode-toggle #svg-moon {
   }
 
   @media (width > 64rem) {
-    position: relative;
-    top: auto;
-    right: auto;
-    transform: none;
-    margin-left: 1.875rem;
-    margin-bottom: 0rem;
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
