--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -4,6 +4,10 @@
     text-align: center;
   }
 
+  .cmp-main-btn--pages {
+    margin-top: clamp(2rem, 7vw, 4rem);
+  }
+
   .cmp-svg-pages-decoration {
     position: relative;
     display: flex;
@@ -55,10 +59,6 @@
     margin-top: 1rem;
   }
 
-  .cmp-main-btn--pg2-s1 {
-    margin-top: 4rem;
-  }
-
   .who-image-block {
     position: relative;
   }
@@ -88,23 +88,21 @@
   /* \\\\\\\\\\\\\\\\\\\\\\\      *** PAGE 2 / SECTION-TWO / PORTFOLIO ***       \\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 
-  .cmp-topper-heading--pg2-s2::before {
+  .cmp-topper-heading--pg2-s2 {
+    font-size: clamp(0.75rem, 2vw, 1.75rem);
+  }
+
+  .cmp-topper-heading--pg2-s2::after {
     position: relative;
     content: "";
     display: block;
     margin-inline: auto;
     background: var(--clr-gray-100);
-    height: 0px;
-    width: 50%;
-    margin-bottom: 3.5rem;
+    height: 1px;
+    width: 19em;
+    margin-top: 0.25rem;
     opacity: 0.3;
     z-index: 999;
-
-    @media (width > 62.5rem) {
-      height: 1px;
-      margin-bottom: 5.5rem;
-      margin-top: -6.5rem;
-    }
   }
 
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
@@ -226,10 +224,6 @@
     }
   }
 
-  .cmp-main-btn--pg3-s1 {
-    margin-top: 4rem;
-  }
-
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\      *** PAGE 3 / SECTION-TWO / MISSION ***       \\\\\\\\\\\\\\\\\\\\\\\\ */
   /* \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
@@ -297,7 +291,7 @@
 
   .pg1-s5-pricing--pg4-s1 {
     position: relative;
-    padding-block: var(--padd-60-100);
+    /* padding-block: var(--padd-60-100) !important; */
   }
 
   .cmp-topper-heading--pg4-s1::before {
