--- a/css/critical.css
+++ b/css/critical.css
@@ -13,8 +13,8 @@
     display: block;
   }
 
-  ul[role="list"],
-  ol[role="list"] {
+  ul,
+  ol {
     list-style: none;
   }
 
@@ -176,34 +176,38 @@
 @layer components {
   @font-face {
     font-display: swap;
-    font-family: "Oswald";
+    font-family: "Barlow Condensed";
     font-style: normal;
     font-weight: 400;
-    src: url("../assets/fonts/oswald-v53-latin-regular.woff2") format("woff2");
+    src: url("../assets/fonts/barlow-condensed-v13-latin-regular.woff2")
+      format("woff2");
   }
 
   @font-face {
     font-display: swap;
-    font-family: "Oswald";
+    font-family: "Barlow Condensed";
     font-style: normal;
     font-weight: 500;
-    src: url("../assets/fonts/oswald-v53-latin-500.woff2") format("woff2");
+    src: url("../assets/fonts/barlow-condensed-v13-latin-500.woff2")
+      format("woff2");
   }
 
   @font-face {
     font-display: swap;
-    font-family: "Oswald";
+    font-family: "Barlow Condensed";
     font-style: normal;
     font-weight: 600;
-    src: url("../assets/fonts/oswald-v53-latin-600.woff2") format("woff2");
+    src: url("../assets/fonts/barlow-condensed-v13-latin-600.woff2")
+      format("woff2");
   }
 
   @font-face {
     font-display: swap;
-    font-family: "Oswald";
+    font-family: "Barlow Condensed";
     font-style: normal;
     font-weight: 700;
-    src: url("../assets/fonts/oswald-v53-latin-700.woff2") format("woff2");
+    src: url("../assets/fonts/barlow-condensed-v13-latin-700.woff2")
+      format("woff2");
   }
 
   :root {
@@ -216,16 +220,17 @@
 
     --fs-sub-text: 0.8rem;
     --fs-body-text: clamp(1.1rem, 1.5vw, 1.2rem);
-    --fs-text-heading: clamp(1.25rem, 1.5vw, 1.5rem);
-    --fs-topper-heading: clamp(0.8rem, 1.5vw, 1rem);
-    --fs-sub-heading: clamp(2rem, 3.5vw, 3rem);
-    --fs-heading: clamp(3rem, 5vw, 4.5rem);
-    --fs-card-heading: clamp(1.56rem, 3vw, 2.25rem);
+    --fs-text-heading: clamp(1.5rem, 2vw, 1.75rem);
+    --fs-topper-heading: clamp(1rem, 1.5vw, 1.2rem);
+    --fs-sub-heading: clamp(2.5rem, 4vw, 3.5rem);
+    --fs-heading: clamp(3.5rem, 6vw, 5rem);
+    --fs-hero-heading: clamp(3.25rem, 5.5vw, 5rem);
+    --fs-card-heading: clamp(1.75rem, 3vw, 2.5rem);
     --fs-card-text: clamp(0.875rem, 1.5vw, 1rem);
-    --fs-nav-L-screen: clamp(0.8rem, 1.2vw, 1.1rem);
-    --fs-nav-S-screen: clamp(1rem, 2.5vw, 1.5rem);
+    --fs-nav-L-screen: clamp(1rem, 1.5vw, 1.25rem);
+    --fs-nav-S-screen: clamp(1.25rem, 3vw, 1.75rem);
 
-    --ff-headings-oswald: "Oswald", Arial, sans-serif;
+    --ff-headings-oswald: "Barlow Condensed", Arial, sans-serif;
     --ff-body-source: "Source Sans 3", Arial, sans-serif;
 
     --padd-60-100: clamp(4rem, 8vw, 6.5rem);
@@ -234,11 +239,11 @@
     --clr-lighter-black: #1a1a1a;
     --clr-gray-100: #707070;
     --clr-gray-200: #4e4b66;
-    --clr-blue-100: #43b7ff;
-    --clr-blue-150: #1469d9;
-    --clr-blue-200: #001f3f;
-    --clr-blue-300: #111926;
-    --clr-navigation-shadow: hsla(0, 0%, 27%, 0.3);
+    --clr-blue-100: #43a4f4;
+    --clr-blue-150: #1954c2;
+    --clr-blue-200: #09193f;
+    --clr-blue-300: #0e1320;
+    --clr-navigation-shadow: #4545454d;
 
     --bg-primary-blue: var(--clr-blue-200);
     --bg-btn: var(--clr-blue-200);
@@ -255,6 +260,10 @@
       outline: 2px solid var(--clr-blue-100);
       outline-offset: 2px;
     }
+  }
+
+  #hero-heading {
+    font-size: var(--fs-hero-heading);
   }
 
   .cmp-main-heading {
@@ -279,12 +288,13 @@
     z-index: 999;
   }
 
+  #hero-heading,
   .cmp-main-heading,
   .cmp-sub-heading,
   .cmp-topper-heading {
     font-family: var(--ff-headings-oswald);
     text-transform: uppercase;
-    line-height: 1.2em;
+    line-height: 1.1;
   }
 
   .cmp-main-heading,
@@ -405,7 +415,7 @@
   }
 
   .wrapper--header {
-    min-height: clamp(4.75rem, 6vw, 6rem);
+    min-height: clamp(4.75rem, 11vw, 6rem);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -413,15 +423,14 @@
 
   .business-logo-container {
     position: relative;
-    min-width: 60%;
+    min-width: 10rem;
     height: auto;
     align-self: start;
     top: 0.85rem;
     perspective: 1000px;
 
-    @media (width > 62.5rem) {
-      width: 25%;
-      min-width: unset;
+    @media (width > 47.5rem) {
+      min-width: 12rem;
     }
   }
 
@@ -433,8 +442,7 @@
     backface-visibility: hidden;
     transition: transform 0.75s;
 
-    @media (width > 62.5rem) {
-      width: 100%;
+    @media (width > 47.5rem) {
       max-width: 12rem;
       transition: transform 1.5s;
     }
@@ -506,7 +514,7 @@
       background: #fff;
     }
 
-    @media (width > 62.5rem) {
+    @media (width > 47.5rem) {
       & {
         display: none;
       }
@@ -523,7 +531,7 @@
     top: 100%;
     right: 0;
     left: 0;
-    width: 90%;
+    width: 18em;
     margin-inline: auto;
     padding: 2em;
     text-align: center;
@@ -546,9 +554,8 @@
       margin-inline: auto;
       gap: 2rem;
       margin-bottom: 0;
-      list-style: none;
 
-      @media (width > 62.5rem) {
+      @media (width > 47.5rem) {
         font-size: var(--fs-nav-L-screen);
         flex-direction: row;
         gap: 3rem;
@@ -571,42 +578,42 @@
       color: var(--clr-lighter-black);
       transition: color 0.3s ease-out;
 
-      &.active-link {
-        font-weight: bold;
-        color: var(--clr-blue-100);
-      }
-
       &:hover {
         color: var(--clr-blue-100) !important;
         transition: color 0.2s ease-out;
       }
 
-      @media (width > 62.5rem) {
-        &.active-link {
-          position: relative;
-          color: var(--clr-lighter-black);
-        }
+      &.active-link {
+        font-weight: bold;
+        color: var(--clr-blue-100);
 
-        &.active-link::after {
-          content: "";
-          position: absolute;
-          left: 0;
-          bottom: -2px;
-          width: 0%;
-          height: 2px;
-          background-color: var(--clr-blue-100);
-          transition: width 0.6s ease-out;
-        }
+        @media (width > 47.5rem) {
+          & {
+            position: relative;
+            color: var(--clr-lighter-black);
+          }
 
-        &.active-link.animate-underline::after {
-          width: 100%;
+          &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 0%;
+            height: 2px;
+            background-color: var(--clr-blue-100);
+            transition: width 0.6s ease-out;
+          }
+
+          &.animate-underline::after {
+            width: 100%;
+          }
         }
       }
     }
 
-    @media (width > 62.5rem) {
+    @media (width > 47.5rem) {
       position: relative;
-      margin-right: 7rem;
+      width: 100%;
       padding: 0;
       z-index: 0;
       box-shadow: none;
@@ -639,7 +646,6 @@
     padding-top: clamp(6rem, 14vw, 8rem);
     overflow: hidden;
     clip-path: inset(0px 0px 0px 0px);
-    padding-bottom: 1.85rem;
 
     @media (width > 47.5rem) {
       text-align: left;
@@ -665,10 +671,6 @@
     color: var(--clr-blue-100);
   }
 
-  #hero-heading {
-    font-size: clamp(2.75rem, 5vw, 4.5rem);
-  }
-
   .hero-text {
     font-size: clamp(1rem, 2vw, 1.5rem);
     color: var(--text-body-white);
@@ -688,7 +690,7 @@
     align-items: center;
     max-width: 100%;
     bottom: 4rem;
-    animation: tilt 18s ease-out 10s infinite;
+    animation: pulsate-bck 10s ease-out 10s infinite;
   }
 
   .hero__image-main {
@@ -699,10 +701,10 @@
     height: auto;
     object-fit: contain;
     margin-top: 3rem;
-    margin-bottom: 1rem;
     opacity: 0;
-    box-shadow: 20px 20px 20px -20px rgba(0, 0, 0, 0.786);
-    animation: roll-in ease-out forwards;
+    filter: drop-shadow(4px 2px 4px rgba(0, 0, 0, 0.334))
+      drop-shadow(6px 2px 8px rgba(0, 0, 0, 0.256));
+    animation: slide-in-elliptic-left-fwd ease-out forwards;
     animation-duration: 2.5s;
     animation-delay: 2s;
 
@@ -713,8 +715,8 @@
     @media (width > 47.5rem) {
       max-width: unset;
       margin-block: 0;
-      left: 0;
-      box-shadow: 0px 40px 20px -20px rgba(0, 0, 0, 0.786);
+      filter: drop-shadow(6px 4px 4px rgba(0, 0, 0, 0.41))
+        drop-shadow(8px 4px 8px rgba(0, 0, 0, 0.364));
 
       &.large-image {
         display: block;
@@ -726,7 +728,7 @@
     }
 
     @media (width > 83.5rem) {
-      left: 2rem;
+      left: 3rem;
     }
 
     @media (prefers-reduced-motion: reduce) {
@@ -763,8 +765,6 @@
   .hero__svg-page-decoration {
     position: relative;
     display: block;
-    top: 30px;
-    bottom: -1px;
     transform: scaleX(-1);
     backface-visibility: hidden;
     fill: #fff;
@@ -842,29 +842,28 @@
 }
 
 @layer animations {
-  @keyframes tilt {
+  @keyframes slide-in-elliptic-left-fwd {
     0% {
-      transform: rotate(0deg);
+      transform: translateX(-800px) rotateY(30deg) scale(0);
+      transform-origin: -100% 50%;
+      opacity: 0;
     }
-
-    93% {
-      transform: rotate(3deg);
-    }
-
-    94% {
-      transform: rotate(-3deg);
-    }
-
-    95% {
-      transform: rotate(2deg);
-    }
-
-    96% {
-      transform: rotate(-2deg);
-    }
-
     100% {
-      transform: rotate(0deg);
+      transform: translateX(0) rotateY(0) scale(1);
+      transform-origin: 1800px 50%;
+      opacity: 1;
+    }
+  }
+
+  @keyframes pulsate-bck {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(0.95);
+    }
+    100% {
+      transform: scale(1);
     }
   }
 
