--- a/css/glide.css
+++ b/css/glide.css
@@ -17,8 +17,12 @@
   color: #000;
   padding-block: 4rem;
   text-align: center;
-  border-radius: 30% 20px;
+  border-radius: 30%;
   overflow: hidden;
+
+  @media (width > 31.25rem) {
+    border-radius: 30% 20px;
+  }
 }
 
 .glide__slides {
