--- a/css/critical.css
+++ b/css/critical.css
@@ -371,7 +371,7 @@
 @layer base {
   html,
   body {
-    height: 100%;
+    min-height: 100%;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
   }
